--- a/integration-test/action.yml
+++ b/integration-test/action.yml
@@ -19,6 +19,13 @@ inputs:
   device:
     description: Device ID for run integration test
     required: false
+  test_bucket:
+    description: S3 bucket for integration test
+    required: false
+    default: dime-integration-test-sit
+  test_folder:
+    description: Unique folder in testing bucket
+    required: true
   minimum_coverage:
     description: "The minimum coverage to pass the check. Optional. Default: `0` (always passes)"
     required: false
@@ -119,12 +126,6 @@ runs:
         echo "::set-output name=redis_host::${REDIS_HOST}"
         echo "::set-output name=redis_port::${REDIS_PORT}"
         echo "::set-output name=redis_pass::${REDIS_ADMIN_PASS}"
-    - name: Create folder in testing bucket
-      id: s3
-      uses: kkp-dfs/dime-github-actions-workflows/bucket@main
-      with:
-        bucket: dime-integration-test-sit
-        folder: ${{ inputs.application_name }}-${{ github.job }}
     - name: Run go integration test
       if: ${{ inputs.language == 'golang' }}
       shell: bash
@@ -143,8 +144,8 @@ runs:
         REDIS_HOST: ${{ steps.setup.outputs.redis_host }}
         REDIS_PORT: ${{ steps.setup.outputs.redis_port }}
         REDIS_PASSWORD: ${{ steps.setup.outputs.redis_pass }}
-        S3_BUCKET: ${{ steps.s3.outputs.bucket }}
-        S3_FOLDER: ${{ steps.s3.outputs.folder }}
+        S3_BUCKET: ${{ inputs.test_bucket }}
+        S3_FOLDER: ${{ inputs.test_folder }}
       run: |
         export PATH=$HOME/go/bin:$(go env GOPATH)/bin:/go/bin:$PATH
         touch $HOME/.ack-ginkgo-rc
@@ -282,10 +283,3 @@ runs:
         curl -X DELETE -u "${RMQ_ADMIN_USER}:${RMQ_ADMIN_PASS}" http://${RMQ_HOST}:15672/api/permissions/${RMQ_VHOST}/${RMQ_USER}
         curl -X DELETE -u "${RMQ_ADMIN_USER}:${RMQ_ADMIN_PASS}" http://${RMQ_HOST}:15672/api/users/${RMQ_USER}
         curl -X DELETE -u "${RMQ_ADMIN_USER}:${RMQ_ADMIN_PASS}" http://${RMQ_HOST}:15672/api/vhosts/${RMQ_VHOST}
-    - name: Remove folder in testing bucket
-      if: ${{ always() && inputs.language == 'golang' }}
-      uses: kkp-dfs/dime-github-actions-workflows/bucket@main
-      with:
-        bucket: dime-integration-test-sit
-        folder: ${{ inputs.application_name }}-${{ github.job }}
-        action: delete
