--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -124,8 +124,8 @@ jobs:
       ecr_repository: ${{ steps.ecr.outputs.repository }}
       ecr_username: ${{ steps.ecr.outputs.username }}
       ecr_password: ${{ steps.ecr.outputs.password }}
-      test_bucket: ${{ steps.s3.outputs.test_bucket }}
-      test_folder: ${{ steps.s3.outputs.test_folder }}
+      test_bucket: ${{ steps.s3.outputs.bucket }}
+      test_folder: ${{ steps.s3.outputs.folder }}
       endpoint: ${{ steps.paramater.outputs.host }}
       ref: ${{ steps.paramater.outputs.ref }}
     steps:
