change image of actions to use public ecr repo

--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -356,18 +356,13 @@ jobs:
 
   db_migration:
     name: Migrate database
-    needs:
-      - setup
-      - build
+    needs: [build]
     runs-on: [self-hosted, linux, deployment, main]
     if: ${{ inputs.migration && ((inputs.code_lang == 'node' && needs.lint.result == 'success') || success()) }}
     environment:
       name: sit
     container:
-      image: 915060398631.dkr.ecr.ap-southeast-1.amazonaws.com/kkp-dfs/dbmate:1.12
-      credentials:
-        username: ${{ needs.setup.outputs.ecr_username }}
-        password: ${{ needs.setup.outputs.ecr_password }}
+      image: public.ecr.aws/c2u4x1k5/dbmate:1.12
       volumes:
         - /var/run/secrets/kubernetes.io/serviceaccount:/var/run/secrets/kubernetes.io/serviceaccount
     steps:
