--- a/.github/workflows/dag-deploy.yml
+++ b/.github/workflows/dag-deploy.yml
@@ -19,4 +19,5 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: kkp-dfs/dags_common_lib
+          path: dags/dags_common_lib
       - run: ls -l
