--- a/integration-test/action.yml
+++ b/integration-test/action.yml
@@ -64,6 +64,7 @@ runs:
         git fetch
         git reset ${{ inputs.helm_ref }} --hard
 
+        unset AWS_WEB_IDENTITY_TOKEN_FILE
         aws s3 ls s3://dime-integration-test-sit
         # aws sts get-caller-identity
         # AWS_TOKEN=$(aws sts assume-role-with-web-identity --role-arn arn:aws:iam::808014229351:role/dime-sit-actions-runner-role --role-session-name ${{ inputs.application_name }}-${{ github.run_id }})
