--- a/.github/workflows/dag-deploy.yml
+++ b/.github/workflows/dag-deploy.yml
@@ -48,10 +48,9 @@ jobs:
         env:
           SERVICEACCOUNT: /var/run/secrets/kubernetes.io/serviceaccount
         run: |
-          export NAMESPACE=$(cat ${SERVICEACCOUNT}/namespace)
           kubectl config set-credentials eks-account --token=$(cat ${SERVICEACCOUNT}/token)
           kubectl config set-cluster eks --server=https://kubernetes.default.svc --certificate-authority=${SERVICEACCOUNT}/ca.crt
-          kubectl config set-context default --cluster=eks --user=eks-account --namespace=$NAMESPACE
+          kubectl config set-context default --cluster=eks --user=eks-account --namespace=${{ inputs.namespace }}
           kubectl config use-context default
       - name: Deploy job
         shell: bash
@@ -59,9 +58,8 @@ jobs:
           REPOSITORY="${{ github.repository }}"
           RELEASE_NAME=${REPOSITORY/"kkp-dfs/"/}
           RELEASE_NAME=${RELEASE_NAME//_/-}
-      
-          helm delete ${RELEASE_NAME}-${{ inputs.environment }} --wait
-          helm create ${RELEASE_NAME}-${{ inputs.environment }} dime-helm/charts/dime-application \
+
+          helm create ${RELEASE_NAME}-${{ inputs.environment }}-$(date +'%Y%m%d%H%M%S') dime-helm/charts/dime-application \
           -f dime-helm/values/airflow-dags/values.yaml \
           -f dime-helm/values/airflow-dags/values-${{ inputs.environment }}.yaml \
           --set "fullnameOverride=${RELEASE_NAME}" \
