--- a/.github/workflows/dag-deploy.yml
+++ b/.github/workflows/dag-deploy.yml
@@ -48,9 +48,10 @@ jobs:
         env:
           SERVICEACCOUNT: /var/run/secrets/kubernetes.io/serviceaccount
         run: |
+          export NAMESPACE=$(cat ${SERVICEACCOUNT}/namespace)
           kubectl config set-credentials eks-account --token=$(cat ${SERVICEACCOUNT}/token)
           kubectl config set-cluster eks --server=https://kubernetes.default.svc --certificate-authority=${SERVICEACCOUNT}/ca.crt
-          kubectl config set-context default --cluster=eks --user=eks-account --namespace=${{ inputs.namespace }}
+          kubectl config set-context default --cluster=eks --user=eks-account --namespace=$NAMESPACE
           kubectl config use-context default
       - name: Deploy job
         shell: bash
