--- a/integration-test/action.yml
+++ b/integration-test/action.yml
@@ -65,8 +65,9 @@ runs:
         git reset ${{ inputs.helm_ref }} --hard
 
         unset AWS_WEB_IDENTITY_TOKEN_FILE
-        aws s3 ls s3://dime-integration-test-sit
-        # aws sts get-caller-identity
+        aws sts get-caller-identity
+        echo "SRE TEST" > test.txt
+        aws s3 cp test.txt s3://dime-integration-test-sit
         # AWS_TOKEN=$(aws sts assume-role-with-web-identity --role-arn arn:aws:iam::808014229351:role/dime-sit-actions-runner-role --role-session-name ${{ inputs.application_name }}-${{ github.run_id }})
         # export AWS_ACCESS_KEY_ID="$(echo $AWS_TOKEN | jq -r '.Credentials.AccessKeyId')"
         # export AWS_SECRET_ACCESS_KEY="$(echo $AWS_TOKEN | jq -r '.Credentials.SecretAccessKey')"
