--- a/integration-test/action.yml
+++ b/integration-test/action.yml
@@ -65,10 +65,11 @@ runs:
         git reset ${{ inputs.helm_ref }} --hard
 
         unset AWS_WEB_IDENTITY_TOKEN_FILE
+        aws configure list
         aws sts get-caller-identity
         echo "SRE TEST" > test.txt
         aws s3 cp test.txt s3://dime-integration-test-sit
-        # AWS_TOKEN=$(aws sts assume-role-with-web-identity --role-arn arn:aws:iam::808014229351:role/dime-sit-actions-runner-role --role-session-name ${{ inputs.application_name }}-${{ github.run_id }})
+        # AWS_TOKEN=$(aws sts assume-role --role-arn arn:aws:iam::808014229351:role/dime-sit-actions-runner-role --role-session-name ${{ inputs.application_name }}-${{ github.run_id }})
         # export AWS_ACCESS_KEY_ID="$(echo $AWS_TOKEN | jq -r '.Credentials.AccessKeyId')"
         # export AWS_SECRET_ACCESS_KEY="$(echo $AWS_TOKEN | jq -r '.Credentials.SecretAccessKey')"
         # export AWS_SESSION_TOKEN="$(echo $AWS_TOKEN | jq -r '.Credentials.SessionToken')"
