Added steps for flutter unittest coverage
To run `make lcov-remove-coverage`

--- a/unit-test/action.yml
+++ b/unit-test/action.yml
@@ -54,7 +54,9 @@ runs:
     - name: Run flutter unit test
       if: ${{ inputs.language == 'flutter' }}
       shell: bash
-      run: make test
+      run: |
+        make test
+        make lcov-remove-coverage
 
     - id: fail_message
       if: ${{ failure() }}
