--- a/.github/workflows/dag-deploy.yml
+++ b/.github/workflows/dag-deploy.yml
@@ -61,7 +61,7 @@ jobs:
           RELEASE_NAME=${RELEASE_NAME//_/-}
 
           kubectl patch -n argocd app ${RELEASE_NAME}-${{ inputs.environment }} -p '{"metadata": {"finalizers": ["resources-finalizer.argocd.argoproj.io"]}}' --type merge
-          helm ls --all-namepsaces
+          helm ls --all-namespaces
           helm uninstall ${RELEASE_NAME}-${{ inputs.environment }} -n argocd --wait
           sleep 5
           helm upgrade -i ${RELEASE_NAME}-${{ inputs.environment }} dime-helm/charts/dime-application \
