check release is exist before uninstall

--- a/.github/workflows/dag-deploy.yml
+++ b/.github/workflows/dag-deploy.yml
@@ -60,9 +60,12 @@ jobs:
           RELEASE_NAME=${REPOSITORY/"kkp-dfs/"/}
           RELEASE_NAME=${RELEASE_NAME//_/-}
 
-          kubectl patch app ${RELEASE_NAME}-${{ inputs.environment }} -p '{"metadata": {"finalizers": ["resources-finalizer.argocd.argoproj.io"]}}' --type merge
-          helm uninstall ${RELEASE_NAME}-${{ inputs.environment }} --wait
-          sleep 5
+          if [ $(helm ls -A -f "${RELEASE_NAME}-${{ inputs.environment }}" -o json | jq -r '. | length') -gt "0" ]; then
+            kubectl patch -n argocd app ${RELEASE_NAME}-${{ inputs.environment }} -p '{"metadata": {"finalizers": ["resources-finalizer.argocd.argoproj.io"]}}' --type merge
+            kubectl delete -n argocd app ${RELEASE_NAME}-${{ inputs.environment }} --wait
+            sleep 5
+          fi
+
           helm upgrade -i ${RELEASE_NAME}-${{ inputs.environment }} dime-helm/charts/dime-application \
           -f dime-helm/values/airflow-dags/values.yaml \
           -f dime-helm/values/airflow-dags/values-${{ inputs.environment }}.yaml \
