--- a/.github/workflows/dag-deploy.yml
+++ b/.github/workflows/dag-deploy.yml
@@ -39,10 +39,7 @@ jobs:
         with:
           gh_access_token: ${{ secrets.gh_access_token }}
       - name: Checkout helm
-        run: |
-          git clone https://github.com/kkp-dfs/dime-helm.git
-          cd dime-helm
-          git checkout dag-updater
+        run: git clone https://github.com/kkp-dfs/dime-helm.git
       - name: Setup kubernetes context
         shell: bash
         env:
@@ -75,6 +72,5 @@ jobs:
           --set "source.password=x-oauth-basic" \
           --set "destination.cluster=${{ inputs.cluster_prefix }}-${{ inputs.environment }}" \
           --set "destination.namespace=${{ inputs.namespace }}" \
-          --set "application.version=dag-updater" \
           --set "application.values.configmaps.default.data.DAGS_REPO=${{ github.repository }}" \
           --set "application.values.secrets.default.data.GH_ACCESS_TOKEN=${{ secrets.gh_access_token }}"
