--- a/docker-build-push/action.yml
+++ b/docker-build-push/action.yml
@@ -18,6 +18,10 @@ inputs:
   target:
     description: Indicate which build stage is the target build stage
     required: false
+    default: ''
+  dockerfile:
+    description: Path to the dockerfile to be built.
+    required: false
   gh_access_token:
     description: GitHub access token
     required: true
@@ -55,13 +59,14 @@ runs:
       shell: bash
       run: echo "::add-mask::${{ inputs.token }}"
     - name: Build & push docker images
-      uses: kkp-dfs/dime-github-actions-workflows/kaniko@main
+      uses: kkp-dfs/dime-github-actions-workflows/kaniko@build-deploy-workflow
       with:
         image: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
         build_args: ${{ inputs.build_args }}
         token: ${{ inputs.token }}
         target: ${{ inputs.target }}
+        dockerfile: ${{ inputs.dockerfile }}
 
     - id: image
       shell: bash
