--- a/.github/workflows/dime-build-deploy.yml
+++ b/.github/workflows/dime-build-deploy.yml
@@ -33,10 +33,6 @@ on:
         required: false
         type: string
         default: main
-      dockerfile:
-        description: Path to the dockerfile to be built.
-        required: false
-        type: string
       environment:
         description: Environment that would like to deploy services
         required: true
@@ -75,6 +71,14 @@ on:
         required: false
         type: string
         default: linux/amd64
+      image:
+        description: Docker image name
+        required: true
+        type: string
+      dockerfile:
+        description: Path to the dockerfile to be built.
+        required: false
+        type: string
       build_args:
         description: List of build-time variables
         required: false
@@ -125,6 +129,8 @@ jobs:
       - name: Get ECR information
         id: ecr
         uses: kkp-dfs/dime-github-actions-workflows/get-ecr-info@main
+        with:
+          repository: ${{ inputs.image || github.repository }}
       - name: Get parameters
         id: paramater
         run: |
@@ -197,8 +203,10 @@ jobs:
         id: build
         uses: kkp-dfs/dime-github-actions-workflows/docker-build-push@build-deploy-workflow
         with:
+          application_name: ${{ inputs.application_name }}
           repository: ${{ needs.setup.outputs.ecr_repository }}
           token: ${{ needs.setup.outputs.ecr_token }}
+          image: ${{ inputs.image }}
           dockerfile: ${{ inputs.dockerfile }}
           gh_access_token: ${{ secrets.gh_access_token }}
 
@@ -218,7 +226,7 @@ jobs:
         - /var/run/secrets/kubernetes.io/serviceaccount:/var/run/secrets/kubernetes.io/serviceaccount
     steps:
       - name: Apply Dime ArgoCD Application Helm
-        uses: kkp-dfs/dime-github-actions-workflows/deploy-app@main
+        uses: kkp-dfs/dime-github-actions-workflows/deploy-app@build-deploy-workflow
         with:
           environment: ${{ inputs.environment }}
           release_name: ${{ needs.setup.output.release_name }}
